# ProjectEuler

./: .gitignore  .gitmodules  MyMonads.hs  Project Euler.sln  Solution1.sln  Useful.hs  test.cpp  test.hpp  useful.cpp  vec.cpp  vec.hpp  vec_test  vec_test.cpp
Arduino/: Solution1.sln  smartrf_CC1101.h
Machine Learning/: Machine Learning.sln
MyStaticLibraries/: MyStaticLibraries.sln
Problem100/: problem100.hs
Problem101/: problem101.hs
Problem101Stack/: CHANGELOG.md  Problem101Stack.cabal  README.md
Problem102/: graphical  graphical.cpp  problem102  problem102.cpp  randomTests  randomTests.cpp  triangle.cpp  triangle.hpp
Problem12/: divisorsTable.txt  main.cpp
Problem14/: Problem14.cpp  Problem14.vcxproj
Problem16/: Problem16.cabal  README.md
Problem18/: Problem18.cpp  Problem18.vcxproj.filters
Problem186/: problem186  problem186.cpp
Problem19/: date.cpp  main.cpp
Problem21/: main
Problem22/: main
Problem23/: main
Problem26/: main.cpp
Problem29/: Problem29.hs
Problem31/: main
Problem32/: Problem32.vcxproj  main
Problem327/: Problem327.cpp  Problem327.vcxproj  problem327  solve.cpp  solve.hpp  test327.cpp  test327.hpp
Problem33/: Problem33.hs
Problem34/: Problem34.hs
Problem351/: S.txt
Problem352/: main.cpp
Problem353/: Graph1023.gcx  main  r1.txt  r1023.txt
Problem44/: main
Problem45/: problem45.cpp  problem45.hs
Project Euler/Problem54/: CMakeLists.txt  poker.cpp  poker.hpp  problem54  problem54.hs  test_example.cpp  test_poker.cpp
Project Euler/Problem54/problem54.dSYM/Contents/: Info.plist
ranges/: ranges.sln
(+234 files in other folders)
